# Flower-Stock-Exchange

./: .gitignore  CMakeLists.txt  Flower-Stock-Exchange-UI.sln  Flower-Stock-Exchange-UI.vcxproj  Flower-Stock-Exchange-UI.vcxproj.filters  Project Details.pptx  README.md  account.cpp  account.h  account_entry.cpp  account_entry.h  data_generate.py  execution_rep.cpp  execution_rep.csv  execution_rep.h  helpers.h  logic.cpp  logic.h  main.cpp  order1.csv  order2.csv  order3.csv  order4.csv  order5.csv  order6.csv  order7.csv  order_book.cpp  order_book.csv  order_book.h  orders.cpp  orders.csv  orders.h
